--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "browser-sync": "^2.26.3",
     "gulp": "^3.9.1",
     "gulp-cli": "^2.0.1",
-    "gulp-sass": "^4.0.2"
+    "gulp-sass": "^4.0.2",
+    "gulp-watch": "^5.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
